<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context="com.sorbellini.s214631.lab2.FormularAddingAnOffer"
    android:padding="16dp">



    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_camera"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:id="@+id/camera" />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/capturephoto"
        android:background="@android:drawable/sym_def_app_icon"/>
    <TextView
        android:id="@+id/offer_title"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offer_name"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <EditText
        android:id="@+id/editOffer_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_offer_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <EditText
        android:id="@+id/editOffer_Description"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/linearLayout2">
            <TextView
                android:id="@+id/editOffer_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/price_title"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />
            <NumberPicker
                android:layout_width="50dp"
                android:layout_height="73dp"
                android:layout_gravity="center"
                android:id="@+id/picker_Price"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/linearLayout">
            <TextView
                android:id="@+id/editOffer_AvailableQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/available_quantity_title"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <NumberPicker
                android:layout_width="50dp"
                android:layout_height="79dp"
                android:layout_gravity="center"
                android:id="@+id/picker_AvailableQuantity"/>

        </LinearLayout>
        <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/save"
            android:id="@+id/offerSave"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="75dp"
            android:layout_marginEnd="75dp"
            android:onClick="saveData" />

        <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:id="@+id/return_menu"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/linearLayout2"
            android:onClick="returnToOffers" />

    </RelativeLayout>




</LinearLayout>





