<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <include layout="@layout/tool_bar" />

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context=".ActivityAddOffer"
    android:padding="16dp">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/add_offer_photo"
        android:onClick="addOfferPhoto"/>
    <TextView
        android:id="@+id/add_offer_name_title"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offer_name"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <EditText
        android:id="@+id/add_offer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_offer_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <EditText
        android:id="@+id/add_offer_description"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/linearLayout2">
            <TextView
                android:id="@+id/add_offer_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/price_title"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />
            <NumberPicker
                android:layout_width="50dp"
                android:layout_height="73dp"
                android:layout_gravity="center"
                android:id="@+id/add_offer_price"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/linearLayout">
            <TextView
                android:id="@+id/add_offer_availability_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/available_quantity_title"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <NumberPicker
                android:layout_width="50dp"
                android:layout_height="79dp"
                android:layout_gravity="center"
                android:id="@+id/add_offer_availability"/>

        </LinearLayout>
        <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/save"
            android:id="@+id/add_offer_save"
            android:layout_gravity="center"
            android:onClick="saveData"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="42dp" />

    </RelativeLayout>
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>





