<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <include layout="@layout/tool_bar" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        tools:context="com.sorbellini.s214631.lab2.FormularAddingAnOffer"
        android:padding="16dp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/daily_offer_capturephoto"/>
        <TextView
            android:id="@+id/daily_offer_name"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_offer_name"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/daily_offer_description"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:text="@string/description_daily_offer"
            android:textSize="18dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/linearLayout2">
                <TextView
                    android:id="@+id/daily_offer_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:text="@string/price_title"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark" />
                <TextView
                    android:id="@+id/daily_offer_price_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="12dp"
                    android:textAlignment="center"
                    android:text="@string/price_number"
                    android:textSize="25dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/linearLayout">
                <TextView
                    android:id="@+id/daily_offer_AvailableQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/available_quantity_title"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:id="@+id/daily_available_quantity_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:paddingTop="12dp"
                    android:text="@string/available_quantity_number"
                    android:textSize="25dp"/>

            </LinearLayout>
         </RelativeLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>



